objects/Vendor__c/Vendor__c.object-meta.xml
<CustomObject>
    <description>This is Vendor object. Vendors in JobSuite are assigned to the line items on Quotes, Estimates, Purchase Orders and Vendor Invoices.  A printer or photographer may be a vendor.</description>
    <label>Vendor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>