objects/Vendor__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <description>This is Vendor Address 1 field.</description>
    <label>Address 1</label>
    <type>TextArea</type>
</CustomField>