objects/Vendor__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>This is Vendor Address 2 field.</description>
    <label>Address 2</label>
    <type>TextArea</type>
</CustomField>