objects/Vendor__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This is Vendor City field.</description>
    <label>City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>