objects/Vendor__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This is Vendor Email field.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>