objects/Vendor__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>This is Vendor Fax field.</description>
    <label>Fax</label>
    <length>20</length>
    <type>Text</type>
</CustomField>