objects/Vendor__c/fields/Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Phone_1__c</fullName>
    <description>This is vendor phone number field.</description>
    <label>Main Phone</label>
    <type>Phone</type>
</CustomField>