objects/Vendor__c/fields/Web_Address__c.field-meta.xml
<CustomField>
    <fullName>Web_Address__c</fullName>
    <label>Web Address</label>
    <type>Url</type>
</CustomField>