objects/Vendor__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>This is vendor zip code field.</description>
    <label>Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>