objects/Vendor__c/validationRules/Zip_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(CONTAINS(Zip__c, &apos; &apos;) , REGEX(Zip__c,  &quot;^[a-zA-Z0-9-/]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Zip__c</errorDisplayField>
    <errorMessage>Zip is not in proper format.</errorMessage>
</ValidationRule>